<resources>
    <string name="app_name">CUT Colombia</string>

    <!-- Vista contenedor -->
    <string-array name="menu_array">
        <item>NOTICIAS</item>
        // items
        <item>EVENTOS</item>
        <item>REDES SOCIALES</item>
        <item>CONSULTAR</item>
        <item>INFORMACIÓN</item>
        <item>CUT TV</item>
    </string-array>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <!-- Noticias -->
    <string name="cargando_noticias">Cargando noticias&#8230;</string>

    <!-- Eventos -->
    <string name="read_more">LEER MÁS</string>
    <string name="cargando_eventos">Cargando eventos&#8230;</string>

    <!-- Información Fragment -->
    <string name="informacion_address">Calle 35 Nº 7&#8211;25 / Piso 9</string>
    <string name="informacion_telefono">PBX: 323 75 50 </string>
    <string name="informacion_correo">prensacut@cut.org.co</string>
    <string name="informacion_twitter">"@cutcolombia"</string>

    <!-- Twitter -->
    <string name="no_tweets">Cargando tweets&#8230;</string>

    <!-- Consultar -->
    <string name="placeholder_correo">Escribe aquí tu correo electrónico</string>
    <string name="placeholder_consulta">Escribe aquí tu consulta acerca de temas laborales, sindicales, etc.</string>
    <string name="btnConsultar">Enviar</string>
    <string name="lbl_email">EMAIL</string>
    <string name="lbl_consulta">CONSULTA (Temas laborales, sindicales, etc.)</string>

    <!-- Evento -->
    <string name="titulo_agenda">Agenda</string>

    <!-- Web -->
    <string name="cargando">Cargando&#8230;</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
