<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="co.org.cut.cut_app.ConsultarFragment"
    android:background="@color/blanco"
    android:clickable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/gris"
            android:textStyle="bold"
            android:text="@string/lbl_email"
            android:textSize="14sp"
            android:layout_marginBottom="4dp"/>

        <EditText
            android:id="@+id/correo"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:gravity="start"
            android:background="@drawable/caja_bordes_grises"
            android:textColor="@color/gris_oscuro"
            android:textColorHint="@android:color/darker_gray"
            android:textCursorDrawable="@null"
            android:padding="10dp"
            android:textSize="16sp"
            android:hint="@string/placeholder_correo"
            android:ellipsize="end"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/gris"
            android:textStyle="bold"
            android:text="@string/lbl_consulta"
            android:textSize="14sp"
            android:layout_marginBottom="4dp"/>

        <EditText
            android:id="@+id/consulta"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:gravity="start"
            android:background="@drawable/caja_bordes_grises"
            android:textColor="@color/gris_oscuro"
            android:textColorHint="@android:color/darker_gray"
            android:textCursorDrawable="@null"
            android:padding="10dp"
            android:textSize="16sp"
            android:hint="@string/placeholder_consulta"
            android:ellipsize="end"
            android:layout_marginBottom="32dp"/>

        <Button
            android:layout_width="120dp"
            android:layout_height="36dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@color/blanco"
            android:background="@color/naranja"
            android:id="@+id/btn_enviar"
            android:text="@string/btnConsultar"
            android:layout_weight="50"/>

    </LinearLayout>

</ScrollView>
